Add more test cases and refined logic
in convert to query expression code action